--- a/SattaHouse/src/main/resources/application-prod.properties
+++ b/SattaHouse/src/main/resources/application-prod.properties
@@ -1,11 +1,11 @@
 
 
 #db specific properties
-spring.datasource.url=jdbc:mysql://root:bC1DEF-e4bhFD-c46-hFa1eCadED5-HD@mysql.railway.internal:3306/railway
+spring.datasource.url=jdbc:mysql://root:bC1DEF-e4bhFD-c46-hFa1eCadED5-HD@roundhouse.proxy.rlwy.net:22996/railway
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
 spring.datasource.password=bC1DEF-e4bhFD-c46-hFa1eCadED5-HD
 #spring.datasource.password=00001111
-
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
